--- a/views/accueiltuteur.ejs
+++ b/views/accueiltuteur.ejs
@@ -22,8 +22,9 @@
           <li><a href="/viewappreciationtuteur?id=<%= user._id %>&classe=<%=classe  %>  ">Des Appreciation</a></li>
           
         </ul>
-        <img src="/images/RR.jpg" alt="IMAGE POUR LE DGR" />
-        <h2><a href="calendrier.html">Calendrier</a></h2>
+        <img src="/images/logo.png" alt="IMAGE POUR LE DGR" />
+        <h2><a onclick="window.open('/calendrier', '_blank').focus();">Calendrier</a></h2>
+
       </div>
       <div class="body">
         <%- include('includes/_progressbar') %>
