--- a/public/css/styleadmin.css
+++ b/public/css/styleadmin.css
@@ -65,7 +65,7 @@ a {
 }
 
 .text-light{
-    color: var(--light);
+    color: black;
 }
 
 .text-gradient{
@@ -177,6 +177,30 @@ table{
     font-size: 1em;
     border-radius: .2em;
 }
+#add_user .form-group label{
+    font-size: 1.5em;
+}
+
+#add_user .form-group input[type="date"]{
+    width: 18%;
+    padding: .6em 1em;
+    margin: .5em 0;
+    border: 1px solid var(--border);
+    font-family: 'Barlow', sans-serif;
+    font-size: 1em;
+    border-radius: .2em;
+}
+
+#add_user .form-group textarea{
+    width: 100%;
+    padding: .6em 1em;
+    margin: .5em 0;
+    border: 1px solid var(--border);
+    font-family: 'Barlow', sans-serif;
+    font-size: 1em;
+    border-radius: .2em;
+}
+
 
 #update_user .form-group .radio,
 #add_user .form-group .radio{
