--- a/views/accueildirecteur.ejs
+++ b/views/accueildirecteur.ejs
@@ -21,19 +21,19 @@
       <div class="side">
         <h2>Administration</h2>
         <ul>
-          <li><a href="/staff">Le Staff Administrative</a></li>
-          <li><a href="/listedeclasse">Liste de élèves</a></li>
-          <li><a href="/viewprof">Liste de enseignants</a></li>
+          <li><a href="/staff">Les Staffs Administratif</a></li>
+          <li><a href="/listedeclasse">Liste d'élèves</a></li>
+          <li><a href="/viewprof">Liste d'enseignants</a></li>
         </ul>
         <h2>Comptabilité</h2>
         <ul>
-          <li><a href="#">Les Factures</a></li>
-          <li><a href="#">Les Dépenses </a></li>
+          <li><a href="viewfacture">Facture des dépenses</a></li>
           <li><a href="listedeclassescolarite">Scolarité</a></li>
         </ul>
-        <h2><a href="#">Statistique Du Lycée</a></h2>
+        <h2><a href="#">Statistique du Lycée</a></h2>
         <img src="/images/RR.jpg" alt="IMAGE POUR LE DGR" />
-        <h2><a href="index.html">Calendrier</a></h2>
+        <h2><a onclick="window.open('/calendrier', '_blank').focus();">Calendrier</a></h2>
+
       </div>
       <div class="body">
        <!--  <div class="ui-widgets">
