--- a/views/add_eleve.ejs
+++ b/views/add_eleve.ejs
@@ -12,8 +12,7 @@
            </div>
         </div>
         <div class="form-title text-center">
-            <h2 class="text-dark">New Eleve</h2>
-            <span class="text-light">Use the below form to create a new account</span>
+            <h2 >NOUVEL ELEVE</h2>
         </div>
 
         <!-- add user form -->
