--- a/views/includes/_show.ejs
+++ b/views/includes/_show.ejs
@@ -7,10 +7,10 @@
         <td><%= users[i].role %> </td>
         <td>
             <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
-                <span class="text-gradient"><i>UPDATE</i></span>
+                <span class="text-gradient"><i>Archive</i></span>
             </a>
             <a class="btn border-shadow delete" data-id=<%= users[i]._id%> >
-                <span class="text-gradient"><i>DELETE</i></span>
+                <span class="text-gradient"><i>Supprimé</i></span>
             </a>
         </td>
     </tr>
