--- a/views/includes/_showeleveprof.ejs
+++ b/views/includes/_showeleveprof.ejs
@@ -66,7 +66,7 @@
         </td>
         <td>
             <a class="btn border-shadow delete" href="/viewappreciation?id=<%=eleves[i]._id%>&user=prof">
-                <span class="text-gradient"><i>AJOUTER</i></span>
+                <span class="text-gradient"><i>VOIR</i></span>
             </a>
         </td>
     </tr>
