--- a/views/viewuser.ejs
+++ b/views/viewuser.ejs
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="box-nav d-flex justify-between">
                 <a href="/add_user" class="border-shadow">
-                    <span class="text-gradient">New User <i class="fas fa-user"></i></span>
+                    <span class="text-gradient">Nouvel utilisateur <i class="fas fa-user"></i></span>
                 </a>
             </div>
 
@@ -33,7 +33,7 @@
             </form>
             <div class="box-nav d-flex justify-between">
                 <a href="/logout" class="border-shadow">
-                    <span class="text-gradient">Log out <i class="fas fa-user"></i></span>
+                    <span class="text-gradient">Se déconnecter<i class="fas fa-user"></i></span>
                 </a>
             </div>
         </div>
